modified sponsorships section. Added spacing between tiers and paddding on the sides so that the lines do not extend all the way to the sides of the page. Made some modifications to the media query on CSS file to fix how the sponsors look like for mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -43,14 +43,20 @@ code {
   padding: 0 20px;
   font-size: 18px; /* Customize text size */
   font-weight: bold; /* Customize text style */
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .sponsorLogos {
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   justify-content: center; /* Adjust as needed */
 }
 
 .sponsorLogos img {
+  /* padding-left: 20px;
+  padding-right: 20px; */
   margin-top: 15px;
   margin-bottom: 15px;
   max-width: 275px;
@@ -64,9 +70,16 @@ code {
   }
 
   .sponsorLogos img {
+    /* padding-left: 0px;
+    padding-right: 0px; */
     margin-top: 15px;
     margin-bottom: 15px;
     flex-direction: column;
     align-items: center; /* Optional: Center images in the column */
+  }
+
+  .sponsorsContainer {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
